--- a/streamer/package.json
+++ b/streamer/package.json
@@ -23,6 +23,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tauri-apps/cli": "^2.9.1",
     "@types/node": "^24.9.1",
+    "esbuild": "^0.27.2",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "typescript": "~5.6.2",
